# p2p-server

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  makefile  release_settings.cfg
.github/workflows/: rust.yml
migrations/: 20210107180627_create-tables.up.sql  20210108164839_trigger.down.sql  20210108164839_trigger.up.sql  20210110142011_create-room.up.sql  20210110162539_delete_trigger.down.sql  20210110162539_delete_trigger.up.sql
migrations-down/: 20210110142011_create-room.down.sql
src/: cache.rs  logger.rs  main.rs  routes.rs
src/config/: mod.rs
src/db/: mod.rs  room.rs  user.rs  user_room.rs
src/models/: room.rs  user.rs  user_room.rs
