[package]
name = "P2P-server"
version = "0.1.0"
authors = ["Stefan <hoef.stef@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.3.0"
serde = "1.0.0"
serde_json = "1.0.57"
fern = "0.6.0"
log = "0.4.11"
chrono = "0.4.19"
listenfd = "0.3.3"
dotenv = "0.15.0"
actix-cors = "0.3.0"
actix-redis = "0.9.1"
actix-session = "0.4.0"
rand = "0.8.1"