[package]
name = "p2p_server"
version = "0.1.0"
authors = ["Stefan <hoef.stef@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.3.0"
serde = "1.0.0"
serde_json = "1.0.57"
fern = "0.6.0"
log = "0.4.11"
listenfd = "0.3.3"
dotenv = "0.15.0"
actix-cors = "0.3.0"
actix-redis = "0.9.1"
actix-session = "0.4.0"
rand = "0.8.1"
uuid = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
validator = "0.10"
validator_derive = "0.10"
jsonwebtoken = "7.1"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono" ] }
anyhow = "1.0"